test/objects/Opportunity/fields/Nom_Architecte__c.field-meta.xml
<CustomField>
    <fullName>Nom_Architecte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du responsable bureau d’architectes</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Bureau_Architecte__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Nom Architecte)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>