test/objects/Opportunity/fields/Nom_Concurrent_1__c.field-meta.xml
<CustomField>
    <fullName>Nom_Concurrent_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom Concurrent 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Nom Concurrent 1)</relationshipLabel>
    <relationshipName>Concurrents</relationshipName>
    <type>Lookup</type>
</CustomField>