test/objects/Opportunity/fields/Nom_Concurrent_2__c.field-meta.xml
<CustomField>
    <fullName>Nom_Concurrent_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom Concurrent 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Nom Concurrent 2</relationshipLabel>
    <relationshipName>Concurrent</relationshipName>
    <type>Lookup</type>
</CustomField>