test/objects/Opportunity/fields/Nom_Concurrent_3__c.field-meta.xml
<CustomField>
    <fullName>Nom_Concurrent_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom Concurrent 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Nom Concurrent 3</relationshipLabel>
    <relationshipName>Concurrent_3</relationshipName>
    <type>Lookup</type>
</CustomField>