test/objects/Opportunity/fields/Nom_de_l_attributaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_attributaire__c</fullName>
    <label>Nom de l&apos;attributaire</label>
    <type>TextArea</type>
</CustomField>