test/objects/Opportunity/fields/Nom_du_Bamo__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_Bamo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du responsable BAMO</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Bamo__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Nom du Bamo)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>