test/objects/Opportunity/fields/Nom_du_responsable_chef_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_responsable_chef_de_projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chef de projet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>BERNASCONI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Nom du responsable- chef de projet)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>