test/objects/Opportunity/fields/Nom_du_responsable_ma_tre_d_ouvrage_2__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_responsable_ma_tre_d_ouvrage_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du responsable maître d’ouvrage 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Ma_tre_Ouvrage_2__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Nom du responsable maître d’ouvrage 2)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>