test/objects/Opportunity/fields/Nom_Etude__c.field-meta.xml
<CustomField>
    <fullName>Nom_Etude__c</fullName>
    <label>Nom Etude</label>
    <length>225</length>
    <type>Text</type>
</CustomField>