test/objects/Opportunity/fields/Nom_Responsable_MO_1__c.field-meta.xml
<CustomField>
    <fullName>Nom_Responsable_MO_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du Responsable MO 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Ma_tre_Ouvrage_1__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Nom Responsable MO 1)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>