test/objects/Opportunity/fields/Note_Developpement_durable_Bernasconi__c.field-meta.xml
<CustomField>
    <fullName>Note_Developpement_durable_Bernasconi__c</fullName>
    <label>Note Developpement durable Bernasconi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>