test/objects/Opportunity/fields/Note_Environnement_Securite_Bernasconi__c.field-meta.xml
<CustomField>
    <fullName>Note_Environnement_Securite_Bernasconi__c</fullName>
    <label>Note Environnement-Securite Bernasconi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>