test/objects/Opportunity/fields/Note_Formation_Bernasconi__c.field-meta.xml
<CustomField>
    <fullName>Note_Formation_Bernasconi__c</fullName>
    <label>Note Formation Bernasconi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>