test/objects/Opportunity/fields/Note_Matrice__c.field-meta.xml
<CustomField>
    <fullName>Note_Matrice__c</fullName>
    <label>Note Matrice</label>
    <summarizedField>Opportunit_R_f_rentiel__c.Resultat__c</summarizedField>
    <summaryForeignKey>Opportunit_R_f_rentiel__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>