test/objects/Opportunity/fields/Note_Organisation_1_er__c.field-meta.xml
<CustomField>
    <fullName>Note_Organisation_1_er__c</fullName>
    <label>Note Organisation 1 er</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>