test/objects/Opportunity/fields/Note_Organisation_du_Soumissionnaire_1er__c.field-meta.xml
<CustomField>
    <fullName>Note_Organisation_du_Soumissionnaire_1er__c</fullName>
    <label>Note Organisation du Soumissionnaire 1er</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>