test/objects/Opportunity/fields/Note_prix_1er__c.field-meta.xml
<CustomField>
    <fullName>Note_prix_1er__c</fullName>
    <label>Note prix 1er</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>