test/objects/Opportunity/fields/Note_Qualite_Technique_Bernasconi__c.field-meta.xml
<CustomField>
    <fullName>Note_Qualite_Technique_Bernasconi__c</fullName>
    <label>Note Qualite Technique Bernasconi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>