test/objects/Opportunity/fields/Numero_dossier__c.field-meta.xml
<CustomField>
    <fullName>Numero_dossier__c</fullName>
    <label>Numero dossier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>