test/objects/Opportunity/fields/Numero_Simap__c.field-meta.xml
<CustomField>
    <fullName>Numero_Simap__c</fullName>
    <label>Numero Simap</label>
    <length>225</length>
    <type>Text</type>
</CustomField>