test/objects/Opportunity/fields/Objet_et_tendu_du_march__c.field-meta.xml
<CustomField>
    <fullName>Objet_et_tendu_du_march__c</fullName>
    <label>Objet et étendu du marché</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>