test/objects/Opportunity/fields/P_riode_de_r_alisation__c.field-meta.xml
<CustomField>
    <fullName>P_riode_de_r_alisation__c</fullName>
    <formula>Date_fin_des_travaux__c  -  D_but_Travaux__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Période de réalisation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>