test/objects/Opportunity/fields/Position_Pilote__c.field-meta.xml
<CustomField>
    <fullName>Position_Pilote__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seul</fullName>
            </value>
            <value>
                <fullName>Mandataire consortium</fullName>
            </value>
            <value>
                <fullName>Consortium</fullName>
            </value>
            <value>
                <fullName>Sous traitant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>