test/objects/Opportunity/fields/Pr_qualification__c.field-meta.xml
<CustomField>
    <fullName>Pr_qualification__c</fullName>
    <label>Préqualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Préqualification acceptée en attente de l&apos;offre</fullName>
            </value>
            <value>
                <fullName>Candidature non retenue</fullName>
            </value>
            <value>
                <fullName>Non répondue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>