test/objects/Opportunity/fields/Prix_adjug_HT__c.field-meta.xml
<CustomField>
    <fullName>Prix_adjug_HT__c</fullName>
    <label>Prix adjugé HT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>