test/objects/Opportunity/fields/Prix_rendu_concurrent_1__c.field-meta.xml
<CustomField>
    <fullName>Prix_rendu_concurrent_1__c</fullName>
    <label>Prix rendu concurrent 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>