test/objects/Opportunity/fields/Prix_rendu_concurrent_2__c.field-meta.xml
<CustomField>
    <fullName>Prix_rendu_concurrent_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prix rendu concurrent 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>