test/objects/Opportunity/fields/Prix_rendu_concurrent_3__c.field-meta.xml
<CustomField>
    <fullName>Prix_rendu_concurrent_3__c</fullName>
    <label>Prix rendu concurrent 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>