test/objects/Opportunity/fields/Prix_rendu_du_1_er_HT__c.field-meta.xml
<CustomField>
    <fullName>Prix_rendu_du_1_er_HT__c</fullName>
    <label>Prix rendu du 1 er HT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>