test/objects/Opportunity/fields/Probabilit_d_obtention__c.field-meta.xml
<CustomField>
    <fullName>Probabilit_d_obtention__c</fullName>
    <label>Probabilité d&apos;obtention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
                <default>true</default>
                <label>25%</label>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>