test/objects/Opportunity/fields/Projet__c.field-meta.xml
<CustomField>
    <fullName>Projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Projet</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projet</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>