test/objects/Opportunity/fields/R_u_le__c.field-meta.xml
<CustomField>
    <fullName>R_u_le__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Dossier reçu le</label>
    <type>Date</type>
</CustomField>