test/objects/Opportunity/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <label>Secteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAT</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>OA</fullName>
            </value>
            <value>
                <fullName>VF</fullName>
            </value>
            <value>
                <fullName>NRJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>