test/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMONT</fullName>
            </value>
            <value>
                <fullName>OFFRE A L’ETUDE</fullName>
            </value>
            <value>
                <fullName>OFFRE REMISE</fullName>
            </value>
            <value>
                <fullName>NEGOCIATION</fullName>
            </value>
            <value>
                <fullName>FERMEE</fullName>
            </value>
            <value>
                <fullName>TRAVAUX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>