test/objects/Opportunity/fields/TECH_BERNASCONI__c.field-meta.xml
<CustomField>
    <fullName>TECH_BERNASCONI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TECH BERNASCONI</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (TECH BERNASCONI)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>