test/objects/Opportunity/fields/TechAutoAffaire__c.field-meta.xml
<CustomField>
    <fullName>TechAutoAffaire__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>TechAutoAffaire</label>
    <type>AutoNumber</type>
</CustomField>