test/objects/Opportunity/fields/TechEstilation_HT__c.field-meta.xml
<CustomField>
    <fullName>TechEstilation_HT__c</fullName>
    <formula>IF(ISBLANK(Estimation_HT__c), 0, Estimation_HT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TechEstilation HT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>