test/objects/Opportunity/fields/TechNumeroDossier__c.field-meta.xml
<CustomField>
    <fullName>TechNumeroDossier__c</fullName>
    <description>Commence a partir du 0800</description>
    <label>TechNumeroDossier</label>
    <type>AutoNumber</type>
</CustomField>