test/objects/Opportunity/fields/TechTerritoire__c.field-meta.xml
<CustomField>
    <fullName>TechTerritoire__c</fullName>
    <label>TechTerritoire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>VD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>