test/objects/Opportunity/fields/Terrassements_M__c.field-meta.xml
<CustomField>
    <fullName>Terrassements_M__c</fullName>
    <label>Terrassements (M³)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>