test/objects/Opportunity/fields/TestV1__c.field-meta.xml
<CustomField>
    <fullName>TestV1__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>TestV1</label>
    <type>AutoNumber</type>
</CustomField>