test/objects/Opportunity/fields/UBDZone__c.field-meta.xml
<CustomField>
    <fullName>UBDZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>lwbdconnector__UBDZone__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>