test/objects/Opportunity/fields/Visite_Obligatoire__c.field-meta.xml
<CustomField>
    <fullName>Visite_Obligatoire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visite Obligatoire</label>
    <type>Checkbox</type>
</CustomField>