test/objects/Opportunity/recordTypes/Affaires.recordType-meta.xml
<RecordType>
    <fullName>Affaires</fullName>
    <active>true</active>
    <businessProcess>Affaire</businessProcess>
    <label>Affaires</label>
</RecordType>