test/objects/Opportunity/recordTypes/Projet.recordType-meta.xml
<RecordType>
    <fullName>Projet</fullName>
    <active>true</active>
    <businessProcess>OpportunitéProjet</businessProcess>
    <label>Projet</label>
</RecordType>