test/objects/Opportunity/validationRules/ChampsObligatoireEtapeRepondue.validationRule-meta.xml
<ValidationRule>
    <fullName>ChampsObligatoireEtapeRepondue</fullName>
    <active>false</active>
    <description>Rendre tous les champs répondus obligatoires à l&apos;étape obligatoire</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;répondue&quot;),
    OR(
        ISBLANK(Montant_Repondu_HT_Base_Bernasconi__c),
 ISBLANK( Prix_rendu_du_1_er_HT__c ) 

    )
)</errorConditionFormula>
    <errorMessage>Veuillez renseigner les champs répondus à cette étape de l&apos;affaire</errorMessage>
</ValidationRule>