test/objects/Opportunity/listViews/Affaire.listView-meta.xml
<ListView>
    <fullName>Affaire</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Status__c</columns>
    <columns>Lien_Simap__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Affaires</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>à statuer,abandonnée,infructueuses,en cours,identification,Travaux,candidature non retenue,Annonce préalable,en négociation,répondue</value>
    </filters>
    <label>Affaire</label>
</ListView>