test/objects/Opportunity/listViews/Copy_of_Affaire.listView-meta.xml
<ListView>
    <fullName>Copy_of_Affaire</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Affaires</value>
    </filters>
    <filters>
        <field>TERR2_NAME</field>
        <operation>equals</operation>
        <value>NE</value>
    </filters>
    <label>Affaire BU 2</label>
</ListView>